--- a/note/技术选型.md
+++ b/note/技术选型.md
@@ -42,14 +42,17 @@
             - HyperTable：开源、高性能、可伸缩的数据库，采用与Google的BigTable相似的模型。按主键在物理上排序，适用于数据分析领域，C++编写，可运行在HDFS上，受GPLV3协议约束。考虑到和HBase从系统架构上相似，协议较多，放弃调研，转向HBase
             - HBase：Hadoop Database，高可靠、高性能、面向列、可伸缩的分布式存储系统，采用主从架构，利用HBase技术可在廉价PC Server上搭建大规模结构化存储集群。是Google BigTable的开源实现
             - VoltDB：内存数据库，提供了NoSQL数据库的可伸缩性和传统关系型数据库的ACID一致性，支持单点53000TPS/s。受GPLV3协议约束。开源社区版和付费企业版。企业版多出计算机集群管理控制台、系统性能仪表盘、数据库宕机恢复、在线数据库Schema修改、在线数据库节点重新加入、JDBC和OLAP导出支持、命令日志。社区不活跃，主导者更希望使用付费版。放弃
-            - CloudData
-            - Gridool
-            - Ddb-query-optimizer
-            - Cages
-            - Redis
-            - MongoDB
-            - Spanner
-            - ElasticSearch
+            - CloudData：一个结构化数据库，没有中文资料，从系统架构、功能上类似MongoDB，放弃
+            - Gridool：基于MapReduce原理设计的网络计算引擎，不支持数据存储，放弃
+            - Ddb-query-optimizer：找不到资料，放弃
+            - Cages：基于ZooKeeper实现数据协调/同步，数据分布式存储，放弃
+            - Redis：开源基于键值对存储系统，具备高性能特征，支持主从复制，并且具有非常快速的非阻塞首先同步、网络断开自动重连等功能。同时包括简单的check-and-set机制，pub/sub和配置设置等，使得Redis表现的更像缓存
+            - MongoDB：开源C++编写的面向集合且模式自由的文档性数据库，是NoSQL中功能最丰富、最像关系型数据库的产品。核心优势，灵活文档模式+高可用复制集+可扩展分片集群；功能特点，二级索引、地理位置索引、aggregate、map-reduce、OridFS支持文件存储；不足，不支持事务，仅支持简单的left join
+            - Spanner：Google的可扩展的、多版本的、全球分布式的同步复制方式数据库。第一个支持全球规模的分布式数据、外部一致性分布式事务的分布式数据库。一个在遍布全球范围的数据中心内部通过多套Paxos状态机器共享数据的数据库。复制被用于全局可用性和地理位置；客户在副本之间自动切换。当数据量或服务器数量发生变化时，Spanner在机器之间自动共享数据，并且Spanner在机器之间自动迁移数据，用以负载均衡和响应失败。Spanner被设计为几百万台机器之上的横向扩展，这些扩展穿过了数百个数据中心和万亿级行数据。功能很强大，但是没有开源
+            - ElasticSearch：基于Lucene的搜索服务器。提供一个分布式多用户能力的全文搜索引擎，基于Restful web接口。基于Java开发，并作为Apache许可条款下的开放源码发布，当前流行的企业级搜索引擎
+       - 对比相似度
+       - 设定规则，开源协议约束
+       - 结果，选择了Cassandra、MongoDB、Redis、MySQL、HBase等进入下一步深入调研     
             
     
         
